<resources>
    <string name="app_name">demo-pagination</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="add_content">Add Content</string>
    <string name="update_content">Update Content</string>
    <string name="invalid_data">Invalid data</string>
</resources>
